# snake

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: gh-pages-deploy.yml
src/: app.rs  main.rs
src/components/: snake.rs
