[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"

# dependencies for client (enable when csr or hydrate set)
console_log = { version = "1" }
console_error_panic_hook = { version = "0.1" }
leptos = "0.6.12"
leptos_meta = { version = "0.6.12", features = ["csr"] }
wasm-bindgen-futures = "0.4.42"
rand = "0.8.5"
wasm-bindgen = "0.2.92"
web-time = "1.1.0"
